Fix overflow on console drag lower end of page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,12 @@
   padding: 0;
 }
 
+html, body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden
+}
+
 .App {
   background-color: $primary;
   height: 100vh;
